--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Using Node 
       uses: actions/setup-node@v2
         with:
-         node-version: 16.
+         node-version: 16.x
       name: run install, build and test
       run: |
       npm instal
