--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -5,13 +5,12 @@ on: pull_request
 jobs: 
   continous-integration:
   runs-on: unbuntu-latest
-
   steps:
     - uses: actions/checkout@v3
     - name: Using Node 
       uses: actions/setup-node@v2
         with:
-         node-version: 16.x
+         node-version: '16.x'
       name: run install, build and test
       run: |
       npm instal
