--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -7,10 +7,10 @@ jobs:
   runs-on: unbuntu-latest
   steps:
     - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
+    - name: Using Node 
+      uses: actions/setup-node@v3
+      with:
+         node-version: ['16.x']
       name: run install, build and test
       run: |
       npm instal
