--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs: 
   continous-integration:
-  runs-on: unbuntu-latest
+  runs-on: ubuntu-latest
   steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
