--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -1,13 +1,13 @@
-name: Continous Integration
+name: Node.js CI
 
-on: pull_request
+on: [push]
 
-jobs: 
-  continous-integration:
-  
-  runs-on: ubuntu-latest
+jobs:
+  build:
 
-  steps:
+    runs-on: ubuntu-latest
+
+    steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -15,4 +15,4 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm run build
-      - run: npm run test
+      - run: npm test
