--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -14,5 +14,5 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm ci
-      - run: npm run test
+      - run: ng test --watch=false
       - run: npm run build
