--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --output-path doc --base-href /page",
+    "build": "ng build --output-path docs --base-href /page",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
