--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -15,3 +15,8 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm run build
+      - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+            with:
+              deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
+              publish_dir: ./build
