--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -16,7 +16,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
-          publish_dir: ./build
+  uses: peaceiris/actions-gh-pages@v3
+  with:
+    github_token: ${{ secrets.ACTIONS_DEPLOY_KEY}}
+    publish_dir: ./public
