--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -18,5 +18,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
+          deploy_key: ${{ actions.ACTION_DEPLOY_KEY }}
           publish_dir: ./build
