--- a/.github/workflows/work-flow.yaml
+++ b/.github/workflows/work-flow.yaml
@@ -1,6 +1,6 @@
 name: Node.js CI
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
@@ -15,8 +15,3 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm run build
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./docs
