--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-page",
+  "homepage": "https://fernandonas.github.io/page/",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
